fix alignment of post pagination buttons

--- a/assets/styles/layouts/_nav.scss
+++ b/assets/styles/layouts/_nav.scss
@@ -163,7 +163,6 @@ nav.scotch-panel-right{
 .posts-navigation{
 	.nav-previous,
 	.nav-next{
-		@include clearfix;
 
 		a{
 			@include btn-color(#fff, $blue, transparent);
@@ -178,7 +177,6 @@ nav.scotch-panel-right{
 			cursor: pointer;
 			text-decoration: none;
 			padding: $btn-padding-y $btn-padding-x;
-			//border-radius: $btn-border-radius-base;
 			border: $btn-border-width solid transparent;
 			margin: 0;
 			white-space: nowrap;
